--- a/app/templates/home/layout.html
+++ b/app/templates/home/layout.html
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="col-md-12">
                 <p>
-                    ©&nbsp;2017&nbsp;flaskmovie.imooc.com&nbsp;京ICP备 13046642号-2
+                    ©&nbsp;2018&nbsp;科创工作室,Author:suyongzhi.
                 </p>
             </div>
         </div>
