代码优化及BUG处理
Signed-off-by: Suyongzhi1997 <1125699801@qq.com>

--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -54,8 +54,14 @@
                                     <td>{{ v.email }}</td>
                                     <td>{{ v.phone }}</td>
                                     <td>
-                                        <img src="{{ url_for('static',filename='uploads/users/'+v.face) }}"
-                                             style="width: 50px;" class="img-responsive center-block" alt="">
+                                        {% if v.face %}
+                                            <img src="{{ url_for('static',filename='uploads/users/'+v.face) }}"
+                                                 style="width: 50px;" class="img-responsive center-block" alt="">
+                                        {% else %}
+                                            <img data-src="holder.js/50x50"
+                                                 style="width: 50px;" class="img-responsive center-block" alt="">
+                                        {% endif %}
+
                                     </td>
                                     <td>{{ v.addtime }}</td>
                                     <td>
