--- a/app/templates/home/layout.html
+++ b/app/templates/home/layout.html
@@ -19,6 +19,10 @@
             padding:3px;
             border:1px solid #ccc
         }
+         .movielist img {
+            width: 263px;
+            height: 389px;
+        }
     </style>
 </head>
 
